[package]
name = "imnodes"
version = "0.2.2"
edition = "2021"
authors = ["Benedikt Mandelkow", "imnodes-rs contributors"]
description = "Rust bindings to https://github.com/Nelarius/imnodes"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "README.md"

[dependencies]
imnodes-sys = { version = "0.2.2", path = "imnodes-sys" }
imgui = {git = "https://github.com/imgui-rs/imgui-rs.git", rev = "ca05418cb449dadaabf014487c5c965908dfcbdd"}

[features]
# export all low level functions
include_low_level_bindings = []

[workspace]
members = ["imnodes-sys", "imnodes-sys-bindgen"]
