[package]
name = "imnodes-sys"
version = "0.2.2"
edition = "2021"
authors = ["Benedikt Mandelkow", "imnodes-rs contributors"]
description = "Raw FFI bindings to imnodes"
license = "MIT/Apache-2.0"
categories = ["gui", "external-ffi-bindings"]
build = "build.rs"
links = "imnodes"

[dependencies]
imgui-sys = {git = "https://github.com/imgui-rs/imgui-rs.git", rev = "ca05418cb449dadaabf014487c5c965908dfcbdd"}

[build-dependencies]
cc = "1.0.83"
