[package]
name = "imnodes-sys"
version = "0.2.2"
edition = "2021"
authors = ["Benedikt Mandelkow", "imnodes-rs contributors"]
description = "Raw FFI bindings to imnodes"
license = "MIT/Apache-2.0"
categories = ["gui", "external-ffi-bindings"]
build = "build.rs"
links = "imnodes"

[dependencies]
imgui-sys = {git = "https://github.com/imgui-rs/imgui-rs.git", rev = "67f7f11363e62f09aa0e1288a17800e505860486"}

[build-dependencies]
cc = "1.0.83"
